2006-08-22  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc: Increase default value of save_precision to 16.

	* ls-mat-ascii.cc (save_mat5_ascii_data): Use scientific format.

2006-08-21  John W. Eaton  <jwe@octave.org>

	* ls-mat5.cc (read_mat5_binary_data, read_mat5_integer_data,
	write_mat5_array): Unconditionally enable code for 64-bit int types.

	* ov-fcn-handle.cc (DEFINE_OV_TYPEID_FUNCTIONS_AND_DATA):	
	For compatibility, set class to function_handle.

2006-08-18  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_real_matrix_format): Also always include space
	for sign if values are int, inf, or nan.
	(set_complex_format, set_complex_matrix_format): Always include
	space for sign in real format, but never in imaginary format.

	* gripes.cc (gripe_logical_conversion): New function.
	* gripes.h: Provide decl.
	* ov.h (octave_value::bool_value, octave_value::bool_matrix_value,
	octave_value::bool_array_value): New arg, warn.
	* ov-base.cc, ov-base.h (octave_base_value::bool_value,
	octave_base_value::bool_matrix_value, 
	octave_base_value::bool_array_value): Likewise.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::bool_array_value,
	OCTAVE_VALUE_INT_SCALAR_T::bool_array_value): Likewise.
	* ov-range.h (octave_range::bool_array_value): Likewise.
	* ov-re-mat.cc, ov-re-mat.h (octave_matrix::bool_array_value):
	Likewise.
	* ov-re-sparse.cc, ov-re-sparse.h
	(octave_sparse_matrix::bool_array_value): Likewise.
	* ov-scalar.h (octave_scalar::bool_value,
	octave_scalar::bool_array_value): Likewise.
	* OPERATORS/op-bm-b.cc (oct_assignop_conv_and_assign):
	Ask for warning from bool_array_value.
	* OPERATORS/op-bm-bm.cc (oct_assignop_conv_and_assign): Likewise.
	* ov-bool.h (octave_bool::bool_value,
	octave_bool::bool_matrix_value, octave_bool::bool_array_value):
	Likewise.
	* ov-bool-mat.h (octave_bool_matrix::bool_matrix_value,
	octave_bool_matrix::bool_array_value): Likewise.
	* ov-bool-sparse.cc, ov-bool-sparse.h
	(octave_sparse_bool_matrix::bool_matrix_value,