@@ -1,3 +1,8 @@
+2006-08-22  David Bateman  <dbateman@free.fr>
+
+	* build_sparse_tests.sh: Don't force conversion to sparse boolean
+	return type for string mapper functions.
+
 2006-08-21  John W. Eaton  <jwe@octave.org>
 
 	* test_io.m: Use isequal (a, b) instead of a != b.  Use isequal
